Построена схема БД, сделаны Entity классы, частично реализованы методы

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=carwashSpring
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_car_wash
+spring.datasource.username=dmitry
+spring.datasource.password=?????????
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.defer-datasource-initialization=false
+spring.sql.init.mode=never
+
+
+
