--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=carwashSpring
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_car_wash
 spring.datasource.username=dmitry
-spring.datasource.password=?????????
+spring.datasource.password=24452
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.defer-datasource-initialization=false
+spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=false
+
 
 
 
