Построена схема БД, сделаны Entity классы, частично реализованы методы

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,21 @@ spring.datasource.password=24452
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=false
+
+
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.port=465
+spring.mail.username= admcarwash@yandex.ru
+!spring.mail.password= Admin1290Admin
+spring.mail.password=keooccvdgzpkwhsz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 
 
 
