До переделывания jbject_id ->id

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.datasource.username=dmitry
 spring.datasource.password=24452
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=false
+spring.jpa.open-in-view=true
 
 
 
@@ -19,7 +19,7 @@ spring.mail.password=keooccvdgzpkwhsz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
+jvmArgs = --add-opens, java.base/java.lang=ALL-UNNAMED
 
 
 
