--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
                 <version>2.22.2</version>
                 <configuration>
                     <argLine>-Xshare:off</argLine>
+                    <argLine>
+                         --illegal-access=warn
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.math=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
