--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.math=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.time/java.lang=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
