--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,12 +10,15 @@ spring:
   jpa:
     show: true
     hibernate:
-      ddl-auto:
-        validate
+      ddl-auto: validate
     open-in-view: true
     output:
         ansi:
           enabled=ALWAYS:
+  liquibase:
+    enabled: true
+  change-log:
+    classpath: db/changelog/db.changelog-master.yaml
   main:
     banner-mode: off
   mail:
