--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,6 +35,9 @@ security:
   jwtSecretExpiration: 86400000
   jwtSecret: 841D8A6C80CBA4FCAD32D5367C18C53B
 
+upload:
+  path: src/main/resources/upload
+
 
 #Свойства RabbitConfiguration
 rabbitconfigure:
